# canopy

./: AGENTS.md  ARCHITECTURE.md  CONTEXT.md  Cargo.toml  README.md  SECURITY.md
docs/: AGENTS.md  canopy-refs.md  cli.md  design.md  mvp.md  storage.md  trust.md
docs/adr/: 0001-private-projections-must-not-leak-hidden-history.md  0002-user-references-target-projection-semantics.md  0003-lifecycle-metadata-has-independent-visibility.md  0004-policy-changes-are-governed-and-separately-enforced.md  0005-workspace-history-has-policy-driven-retention.md  0006-promotion-creates-semantic-history-from-workspace-history.md  0007-relations-have-typed-semantics-and-independent-visibility.md  0008-cryptographic-access-follows-policy-boundaries.md  0009-private-files-use-file-class-policy-and-explicit-surrogates.md  0010-integrity-proofs-are-layered-by-projection-and-policy.md  0011-threat-model-distinguishes-default-guarantees-from-optional-hardening.md  0012-clone-bootstraps-trust-before-materialization.md  0013-ci-jobs-are-scoped-actors-with-policy-controlled-outputs.md  0014-workspaces-replicate-convergent-operations-with-policy-governed-acceptance.md  0015-cli-exposes-semantic-workflows-instead-of-git-shaped-primitives.md  0016-abandoned-changes-remain-intent-history.md  0017-accepted-changes-are-corrected-by-new-semantic-changes.md  0018-defer-infrastructure-choices-until-domain-boundaries-are-stable.md  (+3 more)
docs/agents/: AGENTS.md  domain.md  triage-labels.md
src/: cli.rs  main.rs  materialize.rs  model.rs  paths.rs  projection.rs  promotion.rs  storage.rs
tests/: mvp.rs
(+21 files in other folders)
